--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
     "material-ui-search-bar": "^1.0.0",
+    "prop-types": "^15.8.1",
     "rc-pinterest-grid": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
